<resources>
    <string name="App_Name">Techlab</string>
    <string name="Login_Text">Welcome to&#10;Techlab</string>
    <string name="sign_up_Text">Create a new Account&#10;Techlab</string>
    <string name="LoginButton">Login to Account</string>
    <string name="RegisterButton">Register</string>
    <string name="Email">Email</string>
    <string name="Password_Hint">Password</string>
    <string name="WelcomeUser">You are logged in as a user.</string>
    <string name="title_activity_login">Sign in</string>
    <string name="WelcomeAdmin">Je bent nu ingelogd als Admin.</string>
    <string name="WelcomeBeheerder">Je bent nu ingelogd als Beheerder.</string>
    <string name="GoToRegisterButton">Need a new Account?</string>
    <string name="GoToSignInButton">Already have an account?</string>
    <string name="Name">Name</string>
    <string name="PasswordConfirmation">Confirm password</string>
    <string name="error_email">Enter valid Email Address.</string>
    <string name="error_password">Enter a password.</string>
    <string name="BeheerderText">Klik hier om de producten te displayen/bewerken</string>
    <string name="ListButton">Product Lijst</string>
    <string name="error_name">Enter a name.</string>
    <string name="success">The registration was successful.</string>
    <string name="email_exist">Email already exists.</string>
    <string name="RecylerviewButton">Temporary Recyclerview</string>
    <string name="action_search">Search</string>
    <string name="account_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="product_desc_hint">Add Product Title</string>
    <string name="Add_Product_Description_Hint">Add Product Description</string>
    <string name="add_product_button">Add Product</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_pass">Forget password?</string>
    <string name="new_email">new Email</string>
    <string name="reset_email">Reset email</string>
    <string name="reset_password_login"><u>Reset Password</u></string>
    <string name="quantity">Quantity</string>
    <string name="spin_hint">Choose Category</string>
    <string name="resetPassTitle">Trouble Logging In?</string>
    <string name="resetPassText">Enter your email and we\'ll send&#10;you a link to get back into&#10;your account.</string>
    <string name="CreateNewAccount">Create New Account</string>
    <string name="BackToLogIn">Back To Login</string>
    <string name="voorwaarden">I accept the <u>End-user license agreement</u>.</string>
    <string name="or">or</string>
    <string name="edit_product">Edit product</string>
    <string name="delete_product">Delete product</string>
    <string name="productId">ProductID</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_reservations_text">Reservations</string>
    <string name="bottom_history_text">History</string>
    <string-array name="category">
        <item>Micro Computer</item>
        <item>Virtual Reality</item>
        <item>Kabels</item>
        <item>Computer</item>
        <item>Gameconsole</item>
        <item>Game</item>
        <item>Smart Technology</item>
        <item>Drone</item>
    </string-array>
    <string-array name="placeholder">
        <item>Wait for the items please!</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_reserve">Reserve</string>
    <string name="product_reserve_canceled">Cancel Res</string>

    <string name="product_read_more">Read More</string>
    <string name="product_availability">Available : </string>
    <string name="product_lend">Lend</string>
    <string name="choose_product">Choose Product</string>
    <string name="chooseproductTitle">Choose a product to edit</string>
    <string name="EditproductTitle">Edit the product here</string>
    <string name="AddProductTitle">Add a new product</string>
    <string name="ChangeEmailTitle">Change your Email</string>
    <string name="lend_a_product_to_a_user">Lend a product to a User</string>
    <string name="enter_user_email">Enter user email</string>
    <string name="lend_item">Lend Item</string>
    <string name="change_user_s_role">Change user\'s role</string>
    <string name="choose_user">Choose User</string>
    <string name="choose_user_title">Choose a User to Edit</string>
    <string name="choose_a_date_to_bring_the_product_back">Choose a date to bring the product back</string>
    <string name="lend_by">Lend By :</string>
    <string name="return_reservation">Return</string>
    <string name="date_of_return">Date of Return :</string>
    <string name="is_this_the_item_you_want_to_return">Is this the item you want to return?</string>
    <string name="returnName">Name:</string>
    <string name="returndate">Date of return:</string>
    <string name="date_of_lend">Date of Lend:</string>
    <string name="product">Product:</string>
    <string name="return_product">Return Product</string>
    <string name="ChooseSpinner">Choose user</string>
    <string name="delete_reservation">delete</string>
    <string name="lend">Lend</string>
    <string name="reserved_by">Reserved by :</string>
    <string name="date_of_reservation">Date of reservation :</string>
    <string name="is_this_the_reservation_you_want_to_delete">Is this the reservation you want to delete</string>
    <string name="deleteName">Name :</string>
    <string name="lenditems">Lend Items</string>
    <string name="reservations">Reservations</string>
    <string name="placeholder">placeholder</string>
    <string name="sucessfully_registered">You\'ve successfully registered</string>
    <string name="sucesful_registration_description">You\'ll be redirected to the login page within 5 seconds, or you can simply click the button below to go to the login page.</string>
    <string name="title_activity_send_notification">sendNotification</string>
    <string name="send_notification_to_user">Send notification to user</string>
    <string name="message_title">Message Title...</string>
    <string name="message">Your message...</string>
    <string name="send_notification">Send Notification</string>
    <string name="reason_return_product">Return Product</string>
    <string name="notification_waiting_reservation">Waiting Reservation</string>
    <string name="reason_of_notification">Reason of Notification</string>
    <string name="return_notification">Return Notification</string>
    <string name="date">Date</string>
    <string name="Statistics">Statistics</string>
    <string name="products">products</string>
    <string name="user">Users</string>
    />
</resources>
