<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ReturnActivity">
    <android.support.constraint.Guideline
        android:id="@+id/ReturnGuideRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp"/>

    <android.support.constraint.Guideline
        android:id="@+id/ReturnGuideLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp"/>

    <TextView
        android:id="@+id/ReturnTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/is_this_the_item_you_want_to_return"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        app:layout_constraintEnd_toStartOf="@id/ReturnGuideRight"
        app:layout_constraintStart_toEndOf="@id/ReturnGuideLeft"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/ReturnName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnName"
        app:layout_constraintStart_toEndOf="@id/ReturnGuideLeft"
        app:layout_constraintTop_toBottomOf="@id/ReturnTitle"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:paddingStart="15dp"/>

    <TextView
        android:id="@+id/ReturnNameFilled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        app:layout_constraintStart_toEndOf="@id/ReturnName"
        app:layout_constraintTop_toBottomOf="@id/ReturnTitle"
        android:textColor="@color/mainRed"
        android:textSize="18sp"
        android:paddingStart="15dp"/>

    <TextView
        android:id="@+id/ReturnDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returndate"
        app:layout_constraintStart_toEndOf="@id/ReturnGuideLeft"
        app:layout_constraintTop_toBottomOf="@id/ReturnName"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:paddingStart="15dp"/>

    <TextView
        android:id="@+id/ReturnDateFilled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_return"
        app:layout_constraintStart_toEndOf="@id/ReturnDate"
        app:layout_constraintTop_toBottomOf="@id/ReturnName"
        android:textColor="@color/mainRed"
        android:textSize="18sp"
        android:paddingStart="15dp"/>

    <TextView
        android:id="@+id/ReturnLendDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_lend"
        app:layout_constraintStart_toEndOf="@id/ReturnGuideLeft"
        app:layout_constraintTop_toBottomOf="@id/ReturnDate"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:paddingStart="15dp"/>

    <TextView
        android:id="@+id/ReturnLendDateFilled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_lend"
        app:layout_constraintStart_toEndOf="@id/ReturnLendDate"
        app:layout_constraintTop_toBottomOf="@id/ReturnDate"
        android:textColor="@color/mainRed"
        android:textSize="18sp"
        android:paddingStart="15dp"/>

    <TextView
        android:id="@+id/ReturnProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product"
        app:layout_constraintStart_toEndOf="@id/ReturnGuideLeft"
        app:layout_constraintTop_toBottomOf="@id/ReturnLendDate"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:paddingStart="15dp"/>
    <TextView
        android:id="@+id/ReturnProductFilled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product"
        app:layout_constraintStart_toEndOf="@id/ReturnProduct"
        app:layout_constraintTop_toBottomOf="@id/ReturnLendDate"
        android:textColor="@color/mainRed"
        android:textSize="18sp"
        android:paddingStart="15dp"/>
    
    <Button
        android:id="@+id/ReturnButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ReturnGuideLeft"
        app:layout_constraintEnd_toStartOf="@id/ReturnGuideRight"
        app:layout_constraintTop_toBottomOf="@id/ReturnProduct"
        android:layout_marginTop="28dp"
        android:textColor="@drawable/button_text_color_white"
        android:background="@drawable/btn_bg_red"
        android:padding="16dp"
        android:textAllCaps="false"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/return_product"
        />


</android.support.constraint.ConstraintLayout>