<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LendActivity">


    <TextView
        android:id="@+id/LendTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:text="@string/send_notification_to_user"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/GuidelineLendRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/GuidelineLendLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/GuidelineLendLeft"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.constraint.Guideline
        android:id="@+id/GuidelineLendRight"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/EditTextEmailuser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/enter_user_email"
        app:layout_constraintEnd_toEndOf="@id/GuidelineLendRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/GuidelineLendLeft"
        app:layout_constraintTop_toBottomOf="@id/LendTitle" />


    <Button
        android:id="@+id/NotificationActivityButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_bg_red"
        android:padding="16dp"
        android:text="@string/send_notification"
        android:textAllCaps="false"
        android:textColor="@drawable/button_text_color_white"
        app:layout_constraintEnd_toEndOf="@id/GuidelineLendRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/GuidelineLendLeft"
        app:layout_constraintTop_toBottomOf="@+id/PlaceHolderMessageNotification" />

    <EditText
        android:id="@+id/PlaceHolderEmailNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/placeholder"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"/>

    <EditText
        android:id="@+id/PlaceHolderTitleNotification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/message_title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/GuidelineLendRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/GuidelineLendLeft"
        app:layout_constraintTop_toBottomOf="@+id/EditTextEmailuser" />

    <EditText
        android:id="@+id/PlaceHolderMessageNotification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/message"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/GuidelineLendRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/GuidelineLendLeft"
        app:layout_constraintTop_toBottomOf="@+id/PlaceHolderTitleNotification" />
</android.support.constraint.ConstraintLayout>