<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DeleteReservation">
    <android.support.constraint.Guideline
        android:id="@+id/ReturnGuideRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp"/>

    <android.support.constraint.Guideline
        android:id="@+id/ReturnGuideLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp"/>

    <TextView
        android:id="@+id/DeleteTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/is_this_the_reservation_you_want_to_delete"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        app:layout_constraintEnd_toStartOf="@id/ReturnGuideRight"
        app:layout_constraintStart_toEndOf="@id/ReturnGuideLeft"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/DeleteName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteName"
        app:layout_constraintStart_toEndOf="@id/ReturnGuideLeft"
        app:layout_constraintTop_toBottomOf="@id/DeleteTitle"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:paddingStart="15dp"/>

    <TextView
        android:id="@+id/DeleteNameFilled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        app:layout_constraintStart_toEndOf="@id/DeleteName"
        app:layout_constraintTop_toBottomOf="@id/DeleteTitle"
        android:textColor="@color/mainRed"
        android:textSize="18sp"
        android:paddingStart="15dp"/>
    <TextView
        android:id="@+id/ReservationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_reservation"
        app:layout_constraintStart_toEndOf="@id/ReturnGuideLeft"
        app:layout_constraintTop_toBottomOf="@id/DeleteName"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:paddingStart="15dp"/>
    <TextView
        android:id="@+id/ReservationDateFilled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_reservation"
        app:layout_constraintStart_toEndOf="@id/ReservationDate"
        app:layout_constraintTop_toBottomOf="@id/DeleteNameFilled"
        android:textColor="@color/mainRed"
        android:textSize="18sp"
        android:paddingStart="15dp"/>
    <TextView
        android:id="@+id/DeleteProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product"
        app:layout_constraintStart_toEndOf="@id/ReturnGuideLeft"
        app:layout_constraintTop_toBottomOf="@id/ReservationDate"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:paddingStart="15dp"/>
    <TextView
        android:id="@+id/DeleteProductFilled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product"
        app:layout_constraintStart_toEndOf="@id/DeleteProduct"
        app:layout_constraintTop_toBottomOf="@id/ReservationDate"
        android:textColor="@color/mainRed"
        android:textSize="18sp"
        android:paddingStart="15dp"/>

    <Button
        android:id="@+id/DeleteButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ReturnGuideLeft"
        app:layout_constraintEnd_toStartOf="@id/ReturnGuideRight"
        app:layout_constraintTop_toBottomOf="@id/DeleteProduct"
        android:layout_marginTop="28dp"
        android:textColor="@drawable/button_text_color_white"
        android:background="@drawable/btn_bg_red"
        android:padding="16dp"
        android:textAllCaps="false"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/delete_reservation"
        />

</android.support.constraint.ConstraintLayout>