<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LendActivity">

    <DatePicker
        android:id="@+id/datePicker1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintTop_toBottomOf="@id/ChooseDate"
        app:layout_constraintStart_toStartOf="@id/GuidelineLendLeft"
        app:layout_constraintEnd_toStartOf="@id/GuidelineLendRight"/>

    <TextView
        android:id="@+id/LendTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:text="@string/lend_a_product_to_a_user"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/GuidelineLendRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/GuidelineLendLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ChooseDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingBottom="10dp"
        android:text="@string/choose_a_date_to_bring_the_product_back"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/GuidelineLendRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/GuidelineLendLeft"
        app:layout_constraintTop_toBottomOf="@id/EditTextEmailuser" />

    <android.support.constraint.Guideline
        android:id="@+id/GuidelineLendLeft"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.constraint.Guideline
        android:id="@+id/GuidelineLendRight"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/EditTextEmailuser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_user_email"
        app:layout_constraintTop_toBottomOf="@id/LendTitle"
        app:layout_constraintStart_toStartOf="@id/GuidelineLendLeft"
        app:layout_constraintEnd_toEndOf="@id/GuidelineLendRight"/>


    <Button
        android:id="@+id/LendActivityButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:textColor="@drawable/button_text_color_white"
        android:background="@drawable/btn_bg_red"
        android:textAllCaps="false"
        android:padding="16dp"
        android:text="@string/lend_item"
        app:layout_constraintEnd_toEndOf="@id/GuidelineLendRight"
        app:layout_constraintStart_toStartOf="@id/GuidelineLendLeft"
        app:layout_constraintTop_toBottomOf="@id/datePicker1" />
    <EditText
        android:id="@+id/PlaceHolderEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/placeholder"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"/>
</android.support.constraint.ConstraintLayout>